--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
-
-
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">-->
+    <title>Сайт по онлайн бронированию</title>
     <link rel="stylesheet" href="core/bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/main.css"/>
-
 </head>
 <body>
+
     <div class="container">
+
+        <div class="line row"></div>
+
         <header class="row">
             <div class="col-lg-4 logo"></div>
             <div class="col-lg-4 text-left">
@@ -26,6 +26,21 @@
                 </ul>
             </div>
         </header>
+
+        <div class="line-0 row"></div>
+        <div class="line-1 row"></div>
+
+        <div class="row menu">
+            <menu class="nav nav-pills nav-justified">
+                <li>Авиабилеты</li>
+                <li>Отели</li>
+                <li>Прокат авто</li>
+                <li>Страхование</li>
+                <li>Экскурсии</li>
+                <li>Все сервисы</li>
+            </menu>
+        </div>
+
     </div>
 </body>
 </html>
